--- a/thesis.tex
+++ b/thesis.tex
@@ -334,17 +334,17 @@ purpose of this chapter.}
 \section{Disaggregation}
 
 As with many paradigm shifts within the systems community the idea of disaggregation is born from
-shifting hardware trends. Per-core access to memory have been decreasing for decades~\todo{what
-metric is decreasing}. CPU core counts have consistently increased for over a decade while memory
-speeds and capacity have improved comparatively slowly~\cite{micron-memorywall}. The result is that
-CPU cores have less access to memory bandwidth and capacity now than 10 years ago. Memory is an
-increasingly scarce resource and data center operators are exploring new ways to achieve better
-memory utilization.  Disaggregation is one such option. Monolithic servers have a fixed amount of
-RAM per machine which, at a data center level, leads to a skewed distributed of memory utilization.
-Some servers are starving for memory while others have gigabytes to spare. This spare (stranded)
-memory is one target of disaggregation, it aims to give each server access to a shared pool of RAM.
-In general a disaggregated resource, be it memory, FPGA's, or the network itself, can be provisioned
-for the peak-of-sums, rather than monolithic resources which are provisioned for the
+shifting hardware trends. Per-core access to memory have been decreasing for decades. CPU core
+counts have consistently increased for over a decade while memory speeds and capacity have improved
+comparatively slowly~\cite{micron-memorywall}. The result is that CPU cores have less access to
+memory bandwidth and capacity now than 10 years ago. Memory is an increasingly scarce resource and
+data center operators are exploring new ways to achieve better memory utilization.  Disaggregation
+is one such option. Monolithic servers have a fixed amount of RAM per machine which, at a data
+center level, leads to a skewed distributed of memory utilization.  Some servers are starving for
+memory while others have gigabytes to spare. This spare (stranded) memory is one target of
+disaggregation, it aims to give each server access to a shared pool of RAM.  In general a
+disaggregated resource, be it memory, FPGA's, or the network itself, can be provisioned for the
+peak-of-sums, rather than monolithic resources which are provisioned for the
 sum-of-peaks~\cite{clio,supernic,dsnf}.
 
 The biggest barrier to disaggregation is network latency~\cite{requirements}, and more aptly the
@@ -358,42 +358,158 @@ is a single digit percentage or less~\cite{decible}. In contrast DRAM latencies 
 over RDMA has a nearly 20x overhead compared to local access. Despite this overhead RDMA is one of
 the strongest contenders for a disaggregated transport.  CXL is a burgeoning technology which
 promises NUMA-like latencies (200-300ns) for remote memory access~\cite{cxl}. At the time of writing
-CXL is not widely available and its performance and scalability are not well understood. Regardless
-of interconnect the principle of access latency remains the same. This dissertation focuses on RDMA
-although we see the algorithms and data structures presented here to be largely interconnect
-independent.
+CXL is not widely available and its performance and scalability are not well
+understood~\cite{direct-cxl,pond,cxl-demyst}. Regardless of interconnect
+the principle of access latency remains the same. This dissertation focuses on RDMA although we see
+the algorithms and data structures presented here to be largely interconnect independent.
 
 
 \section{RDMA}
 
-Remote direct memory access (RDMA) is a low latency, high bandwidth network protocol. It achieves
-high performance by bypassing multiple overheads common to a traditional networking stack (e.g.
-Linux Sockets). 
+Remote direct memory access (RDMA) is the key enabling technology for disaggregation. This section
+describes RDMA's characteristics with respect to how it enables disaggregated architectures via its
+one-sided verbs, as well as the complexities of building shared data structures on top of RDMA with
+respect to serialization.
+
+RDMA is a low latency, high bandwidth network protocol. It achieves high performance by bypassing
+multiple overheads common to a traditional networking stack (e.g.  Linux Sockets). 
 %%
 Firstly RDMA is a kernel-bypass technology. It allows userspace applications to directly interact
 with the network interface card (NIC) taking advantage of NIC specific features like on-nic
 caches~\cite{sherman} and avoiding context switch overheads.
 %%
-Second, RDMA's most distinguishing feature is that it
-offloads much of the network stack to the NIC hardware and bypasses the CPU entirely for data
-transfer. As an example, in a traditional networking stack if a process sends a UDP message on an
-existing socket the user first marshals the data and then submits it to the kernel via a
-\textit{send}. The kernel then copies the data out of user-space, sets up the packet header, and
-submits the packet to the NIC. In contrast with RDMA the user-space application registers a region
-of memory with the NIC prior to sending data. If an application wants to transfer the data in that
-region to a remote machine it passes a pointer to the data, and the data's size to the NIC along
-with the remote machines's address, and the action the NIC should take (read, write, atomic). The
-application sends by calling a special \textit{rdma send}. This operation is non-blocking and sends
-a signal to the NIC which then DMAs the memory out of the processes address space, constructs a
-packet on the NIC (including managing transport state) and sends directly to another machine. The
-receiving NIC (in the case of a write) issues the DMA to the remote machine's memory without ever
-interacting with its CPU.  
+Second, RDMA's most distinguishing feature is that it offloads much of the network stack to the NIC
+hardware and bypasses the CPU entirely for data transfer. CPU bypass on the receiver side is what
+makes RDMA the key enabling technology for disaggregation. A receiver can expose it's resources like
+memory without requiring a CPU to manage the transfer.
+
+The following example illustrates the difference between sending and receiving with a traditional
+Unix api vs the sequence of operations with RDMA. In a traditional networking stack if a process
+sends a UDP message on an existing socket the user first marshals the data and then submits it to
+the kernel via a \textit{send}. The kernel then copies the data out of user-space, sets up the
+packet header, and submits the packet to the NIC. 
 %%
-\todo{summarize the example (amy)}
-The example above is only a high-level overview of an RDMA write, the
-RDMA protocol is deeply complex. The current infiniband RDMA specification is over 1,700
-pages~\cite{infiniband-spec}. In this section I briefly cover the most important aspects of
-RDMA for the purposes of this dissertation.
+In contrast with RDMA the user-space application
+registers a region of memory with the NIC prior to sending data. If an application wants to transfer
+the data in that region to a remote machine it passes a pointer to the data, and the data's size to
+the NIC along with the remote machines's address, and the action the NIC should take (read, write,
+atomic). The application sends by calling a special \textit{rdma send}. This operation is
+non-blocking and sends a signal to the NIC which then DMAs the memory out of the processes address
+space, constructs a packet on the NIC (including managing transport state) and sends directly to
+another machine. The receiving NIC (in the case of a write) issues the DMA to the remote machine's
+memory without ever interacting with its CPU.  
+%%
+\todo{summarize the example (amy)} The example above is only a high-level overview of an RDMA write,
+the RDMA protocol is deeply complex. The current infiniband RDMA specification is over 1,700
+pages~\cite{infiniband-spec}. In this section I briefly cover the most important aspects of RDMA for
+the purposes of this dissertation.
+
+\subsection{RDMA Connections}
+
+When run over Ethernet using the RoCEv2
+standard, RDMA NICs located on client and server can cooperate to
+implement congestion~\cite{hpcc,dcqcn} and flow control, reliable
+delivery, and at-most-once delivery semantics.  Before exchanging
+data, RDMA end points establish a queue pair (QP) which defines the
+region(s) of memory each is able to access.  Like Internet transport
+protocols, RDMA queue pairs provide a configurable set of semantics
+depending on the transport mode selected: UDP-like semantics are
+provided by unreliable datagram (UD) and unreliable connections (UC),
+while reliable connections (RC) are similar to TCP, ensuring reliable,
+in-order delivery.  Moreover, reliable connections support so-called
+\emph{1-sided} verbs (e.g., read, write, and compare-and-swap) that
+are executed autonomously by the remote NIC without any remote CPU
+involvement.
+
+The benefits of the various transport modes and
+1-vs-2-sided verbs has been a topic of intense debate.  While reliable
+connections provide enhanced guarantees, their implementation requires
+on-NIC memory, a precious resource, and researchers have observed
+scalability bottlenecks due to memory and cache limitations in the
+Mellanox ConnectX family of RDMA
+NICs~\cite{farm,fasst,erpc,lite,design-guidelines}.  Recent work has
+shown how to overcome limits in terms of the number of
+connections~\cite{storm,flock}, but the ordering guarantees provided
+by RC remain restricted to individual queue pairs.  While unreliable
+transport modes can deliver superior performance and
+scalability~\cite{fasst}, they require the use of 2-sided
+verbs---i.e., involvement of a CPU at the memory server---to ensure
+ordering, a non-starter for passive disaggregated settings.  Unless
+hardware support for more sophisticated 1-sided verbs~\cite{filemr,rma,star}
+becomes available, another approach is required.
+
+
+\subsection{Atomic Verbs}
+
+%%
+Atomic operations such as compare-and-swap (CAS) are essential for
+implementing locks or opportunistic concurrency. Atomics are limited
+to 64-bit operations and bottleneck at lower rates than reads and
+writes because they block requests on data-dependent addresses while
+waiting on PCIe round trips~\cite{design-guidelines,sherman}.
+Figure~\ref{fig:rdma_concur} shows that the NICs in our testbed
+(100-Gbps NVIDIA Mellanox ConnectX-5s) are capable of serving many 10s of
+millions of RDMA operations per second (limited only by link speed),
+but CAS operations to remote server memory top out around 50 MOPS.  Hence, we employ atomic operations judiciously in RCuckoo.
+
+%the scalability of
+%these operations on CX5 NICs for 64 bit operations.
+%%
+
+While atomic operations are limited to 64 bits, read and write message
+sizes are bounded only by the link MTU.
+%can 
+%RDMA NIC bandwidth has increased disproportionately to
+%latency in the last decade leading to interesting design
+%tradeoffs. CX7 NICs have 10$\times$ the bandwidth of CX3's
+%but their intra-rack RTT has only shrunk by 1.5$\times$.
+Figure~\ref{fig:rdma-benchmarks-b} shows that on our testbed
+NIC-to-NIC round-trip times are similar for all message sizes
+less than about 128 bytes, and
+%on CX5s for variable sized writes. All writes up
+%to 128 bytes have comparable latencies and
+messages must exceed 1~KB before the latency of a single large
+operation exceeds two RTTs of smaller ones.  We leverage this
+observation in RCuckoo by collapsing multiple small reads into a
+single larger one when appropriate.  The optimal threshold trades off
+latency reduction against read amplificaiton.
+
+%\textbf{If there
+%is surplus bandwidth a single large message can have much
+%lower latency than two dependent smaller messages.}
+
+Finally, we highlight that our testbed NICs, like those from several
+vendors, include a small amount (256~KB in our case) of on-NIC memory
+that can be addressed by remote clients using RDMA
+operations~\cite{device-memory}.  Accesses to NIC memory avoid the
+need to cross the server's PCIe bus, decreasing latency and increasing
+throughput.  The performance gain is particularly significant for
+atomic operations.  Figure~\ref{fig:rdma-benchmarks-c} shows the
+maximum aggregate throughput of concurrent CAS operations targeting
+the same single (i.e., contended) address or distinct, independent
+addresses in both main server memory (shown in orange) and on-NIC
+device memory (blue).  CAS operations perform between 1.8--3.1$\times$
+faster on NIC memory.  
+%%
+Chapter~\ref{chap:rcuckoo} illustrates the profound effect that utilizing NIC memory can have on
+data structure performance in a disaggregated setting by using NIC memory specifically for high
+contention locking operations.
+
+
+%many modern NICs
+%Vendors have provided some workarounds for atomic
+%bottlenecks by adding device memory and masked atomic
+%operations. CX series NICs have a 256KB region of on-NIC
+%RDMAable memory. Atomics to this region avoid the round trip
+%and execute with lower latency and up to 3x higher
+%throughput().
+%Masked CAS (MCAS) allows for each bit to be set
+%independently thus enabling higher density locks while
+%reducing contention~\cite{rdma-masked-cas}. While multi-CAS
+%is not supported these features have been demonstrated to
+%enable fast dense lock tables~\cite{sherman}.
+
+
 
 \section{One-Sided Verbs}
 %%
@@ -612,85 +728,6 @@ We briefly overview RDMA, use of
 programmable switches in disaggregated settings, and passive remote
 memory.
 
-\subsection{RDMA protocol}
-
-RDMA was designed as a protocol for accessing remote memory. It
-defines a set of zero-copy instructions---known as
-\textit{verbs}---that are invoked by clients to read or write memory
-physically located on remote servers, typically without kernel
-involvement on either end.  When run over Ethernet using the RoCEv2
-standard, RDMA NICs located on client and server can cooperate to
-implement congestion~\cite{hpcc,dcqcn} and flow control, reliable
-delivery, and at-most-once delivery semantics.  Before exchanging
-data, RDMA end points establish a queue pair (QP) which defines the
-region(s) of memory each is able to access.  Like Internet transport
-protocols, RDMA queue pairs provide a configurable set of semantics
-depending on the transport mode selected: UDP-like semantics are
-provided by unreliable datagram (UD) and unreliable connections (UC),
-while reliable connections (RC) are similar to TCP, ensuring reliable,
-in-order delivery.  Moreover, reliable connections support so-called
-\emph{1-sided} verbs (e.g., read, write, and compare-and-swap) that
-are executed autonomously by the remote NIC without any remote CPU
-involvement.
-
-The benefits of the various transport modes and
-1-vs-2-sided verbs has been a topic of intense debate.  While reliable
-connections provide enhanced guarantees, their implementation requires
-on-NIC memory, a precious resource, and researchers have observed
-scalability bottlenecks due to memory and cache limitations in the
-Mellanox ConnectX family of RDMA
-NICs~\cite{farm,fasst,erpc,lite,design-guidelines}.  Recent work has
-shown how to overcome limits in terms of the number of
-connections~\cite{storm,flock}, but the ordering guarantees provided
-by RC remain restricted to individual queue pairs.  While unreliable
-transport modes can deliver superior performance and
-scalability~\cite{fasst}, they require the use of 2-sided
-verbs---i.e., involvement of a CPU at the memory server---to ensure
-ordering, a non-starter for passive disaggregated settings.  Unless
-hardware support for more sophisticated 1-sided verbs~\cite{filemr,rma,star}
-becomes available, another approach is required.
-
-
-%% While
-%% host memory can provide better scalability modern NICs have bigger
-%% caches with better cache management~\cite{storm}. In the disaggregated
-%% setting no memory side CPU exists to manage the state making RC the
-%% only option for one sided operations.
-
-%% \todo{connection multiplexing ~\cite{flock}}
-
-%% RDMA
-
-% Remote direct memory access (RDMA) is a network protocol
-% which allows NICs to bypass CPUs and access host memory
-% directly.  The RDMA protocol consists of a set of verbs
-% which abstract remote memory instructions. Instruction
-% execution and connection state are entirely managed by the
-% NIC which exposes the verbs API to the CPU. The CPU
-% registers memory regions for DMA with the NIC and sets up
-% connections (Queue Pairs) with a remote RDMA enabled NIC.
-% %%
-% RDMA connections come in a variety of flavors, each of which
-% enables a different set of RDMA verbs and delivary
-% guarantee~\cite{herd, erpc, storm}. Unreliable Datagram
-% (UD), and Unreliable Connection (UC) operate similar to UDP
-% with no reliable delivery or ordering guarantees and a
-% restricted set of verbs.  Reliable Connected (RC) operates
-% similar to TCP, the NIC manages connection states for each
-% QP and ensures reliable in-order delivery by using sequence
-% numbers and a go-back-n retransmission protocol.
-% %%
-% Serious debate exists over which connections to
-% use~\cite{storm,cell,herd,faast,farm}, each has advantages
-% and disadvantages in terms of NIC resource utilization,
-% throughput, and latency. Disaggregated architectures have no
-% remote CPU's, in this proposed setting RC is the most
-% attractive as it alone enables the use of one-sided verbs
-% :\textit{Read}, \textit{Write}, and the atomic \textit{CAS}
-
-
-%% RDMA Connections
-%% RDMA Atomics
 
 
 
@@ -876,81 +913,6 @@ lock-less reads with RDMA~\cite{farm,pilaf,cuckoo}.
 
 
 
-\subsection{RDMA}
-
-RDMA
-%is an enabling technology for memory disaggregation. It allows
-allows
-clients to directly access the memory of a remote server with
-one-sided operations like read, write and atomic update without the
-involvement of a remote CPU~\cite{infiniband-spec}.  To set the
-context for RCuckoo's design, we benchmark the baseline performance of
-our testbed hardware, illustrating the constraints and
-opportunities.
-
-%%
-Atomic operations such as compare-and-swap (CAS) are essential for
-implementing locks or opportunistic concurrency. Atomics are limited
-to 64-bit operations and bottleneck at lower rates than reads and
-writes because they block requests on data-dependent addresses while
-waiting on PCIe round trips~\cite{design-guidelines,sherman}.
-Figure~\ref{fig:rdma_concur} shows that the NICs in our testbed
-(100-Gbps NVIDIA Mellanox ConnectX-5s) are capable of serving many 10s of
-millions of RDMA operations per second (limited only by link speed),
-but CAS operations to remote server memory top out around 50 MOPS.  Hence, we employ atomic operations judiciously in RCuckoo.
-
-%the scalability of
-%these operations on CX5 NICs for 64 bit operations.
-%%
-
-While atomic operations are limited to 64 bits, read and write message
-sizes are bounded only by the link MTU.
-%can 
-%RDMA NIC bandwidth has increased disproportionately to
-%latency in the last decade leading to interesting design
-%tradeoffs. CX7 NICs have 10$\times$ the bandwidth of CX3's
-%but their intra-rack RTT has only shrunk by 1.5$\times$.
-Figure~\ref{fig:rdma-benchmarks-b} shows that on our testbed
-NIC-to-NIC round-trip times are similar for all message sizes
-less than about 128 bytes, and
-%on CX5s for variable sized writes. All writes up
-%to 128 bytes have comparable latencies and
-messages must exceed 1~KB before the latency of a single large
-operation exceeds two RTTs of smaller ones.  We leverage this
-observation in RCuckoo by collapsing multiple small reads into a
-single larger one when appropriate.  The optimal threshold trades off
-latency reduction against read amplificaiton.
-
-%\textbf{If there
-%is surplus bandwidth a single large message can have much
-%lower latency than two dependent smaller messages.}
-
-Finally, we highlight that our testbed NICs, like those from several
-vendors, include a small amount (256~KB in our case) of on-NIC memory
-that can be addressed by remote clients using RDMA
-operations~\cite{device-memory}.  Accesses to NIC memory avoid the
-need to cross the server's PCIe bus, decreasing latency and increasing
-throughput.  The performance gain is particularly significant for
-atomic operations.  Figure~\ref{fig:rdma-benchmarks-c} shows the
-maximum aggregate throughput of concurrent CAS operations targeting
-the same single (i.e., contended) address or distinct, independent
-addresses in both main server memory (shown in orange) and on-NIC
-device memory (blue).  CAS operations perform between 1.8--3.1$\times$
-faster on NIC memory.  RCuckoo's datastructures are designed so that
-all CAS operations are performed on NIC memory.
-
-%many modern NICs
-%Vendors have provided some workarounds for atomic
-%bottlenecks by adding device memory and masked atomic
-%operations. CX series NICs have a 256KB region of on-NIC
-%RDMAable memory. Atomics to this region avoid the round trip
-%and execute with lower latency and up to 3x higher
-%throughput().
-%Masked CAS (MCAS) allows for each bit to be set
-%independently thus enabling higher density locks while
-%reducing contention~\cite{rdma-masked-cas}. While multi-CAS
-%is not supported these features have been demonstrated to
-%enable fast dense lock tables~\cite{sherman}.
 
 \subsection{Concurrent hash tables} 
 \label{sec:cuckoo-back}
